--- a/index.html
+++ b/index.html
@@ -9,18 +9,26 @@
   </head>
   <body>
     <h1>2048</h1>
-    <h2 id="newgame">NEW GAME</h2>
-    <div id="grid">
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
-        <div class="squares">2</div>
+    
+    <button class="newBtn">NEW GAME</button>
+    
+    <div id="game-board">
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
+        <div class="squares"></div>
 
     </div>
 
