--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>2048</h1>
+    <h1 class="title">2048</h1>
     
     <button class="newBtn">NEW GAME</button>
     
