--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1 class="title">2048</h1>
-    <button class="newBtn">NEW GAME</button>
+    <button id="newBtn">NEW GAME</button>
     <div id="board"></div>
   </body>
 </html>
