--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     
     <title>2048</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <script src="script.js"></script>
   </head>
+
+
+
   <body>
     <h1 class="title">2048</h1>
-    <button id="newBtn">NEW GAME</button>
+    <button id="newBtn"><span style="font-weight: bold;">NEW GAME</span></button>
     <div id="board"></div>
+    <p><span style="font-weight: bold;">HOW TO PLAY:</span> Use your <span style="font-weight: bold;">arrow keys</span> to move the tiles. Tiles with the same number <span style="font-weight: bold;">merge into one</span> when they touch. 
+      Add them up to reach <span style="font-weight: bold;">2048!</span></p>
   </body>
 </html>
